--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.h2.console.path=/h2
 
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+
+spring.threads.virtual.enabled=true
